# track3

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  README.md  components.json  config.example.yaml  download-page.mjs  download-page.test.mjs  download.html  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.agents/: settings.local.json
.agents/skills/investment-report/: SKILL.md
.agents/skills/track3-history/: SKILL.md
.agents/skills/track3-history-asset/: SKILL.md
.agents/skills/track3-history-compare/: SKILL.md
.agents/skills/track3-history-portfolio/: SKILL.md
.agents/skills/version-upgrade/: SKILL.md
.claude/skills/version-upgrade/: SKILL.md
.github/workflows/: publish.yaml  push-to-release.yaml  test-on-pr.yaml
docs/: ibkr-flex-credentials.md
pkg/: .gitignore  README.md  package.json
pkg/src/: index.ts  types.d.ts
pkg/src/coins/: btc.ts  doge.ts  erc20.ts
pkg/src/database/: index.ts  notion.ts  sqlite.ts
pkg/src/price/: price.ts
pkg/src/utils/: async.ts  date.ts  http.ts
scripts/: update.mjs
src/: App.tsx  btc.ts  cex.ts  doge.ts  erc20.ts  index.ts  main.tsx  others.ts  price.ts  sol.ts  style.css  types.d.ts  update-release.test.ts
src-tauri/: Cargo.toml  mobile.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: migrated.json
src-tauri/cloudsync/: record.txt  user.txt
src-tauri/icons/: icon.icns
src-tauri/migrations/init/: asset_actions_up.sql  asset_prices_up.sql  assets_up.sql  assets_v2_up.sql  chat_sessions_up.sql  cloud_sync_up.sql  configuration_up.sql  currency_rates_up.sql  transactions_up.sql
src-tauri/migrations/v01t02/: assets_down.sql  assets_v2_up.sql  cloud_sync_up.sql
src-tauri/migrations/v02t03/: assets_v2_migrate.sql
src-tauri/migrations/v03t04/: asset_prices_up.sql  cloud_sync_migrate.sql
src-tauri/migrations/v04t05/: assets_v2_idx_up.sql  assets_v2_uniq_idx_up.sql  cloud_sync_down.sql  transactions_up.sql
src-tauri/migrations/v06t07/: asset_type_up.sql  assets_v2_asset_type_up.sql  transactions_asset_type_up.sql
src-tauri/src/: binance.rs  database_path.rs  ent.rs  info.rs  lib.rs  main.rs  migration.rs  okex.rs  price.rs  refresh_persistence.rs  startup_security.rs  types.rs
src-tauri/src/key_rotation/: database.rs  files.rs  journal.rs  mod.rs  preflight.rs  tests.rs
src/assets/templates/: asset-change.eta  coins-amount-change.eta  index.eta  latest-assets-percentage.eta  latest-assets-percentage.html  top-coins-rank.eta  total-value.eta
src/chart/: assets.ts  chart.ts  coinsAmount.ts  index.ts  percentage.ts  rank.ts  totalValue.ts
src/coins/: btc.ts  cex.ts  doge.ts  erc20.ts  sol.ts
src/coins/cex/: binance.ts  cex.ts  okex.ts  others.ts
src/components/: app-shell-accessibility.test.tsx  appearance.tsx  asset-change.tsx  assets-percentage-change.test.tsx  assets-percentage-change.tsx  ath-value.tsx  auto-backup-indicator.tsx  auto-updater.test.tsx  auto-updater.tsx  buy-and-sell-analysic.tsx  buy-and-sell-analysis.tsx  coin-analytics.test.tsx  coin-analytics.tsx  coins-amount-and-value-change.tsx  comparison-page.test.tsx  comparison.tsx  configuration-base-currency.test.tsx  configuration.tsx  data-management-blacklist.test.tsx  data-management.tsx  date-picker.tsx  general-settings.tsx  historical-data-accessibility.test.tsx  historical-data-delete-flash.test.tsx  historical-data.tsx  latest-assets-percentage.tsx  overview-card-alignment.test.tsx  overview-loading.test.tsx  overview-mobile-density.test.tsx  overview-semantic-controls.test.tsx  overview.tsx  page-loading-overlay.tsx  page-shell-loading.test.tsx  page-wrapper.tsx  pnl-chart.tsx  pnl.tsx  profit-loading.test.tsx  profit-metrics.test.tsx  profit-metrics.tsx  profit-summary.tsx  (+22 more)
src/components/asset-change/: index.tsx
src/components/assistant/: chat-composer.test.tsx  chat-composer.tsx  chat-page.test.tsx  chat-page.tsx  chat-thread.test.tsx  chat-thread.tsx  inline-chart.test.tsx  inline-chart.tsx  markdown-renderer.tsx  message-bubble.test.tsx  message-bubble.tsx  quick-actions.test.tsx  quick-actions.tsx  session-sidebar.test.tsx  session-sidebar.tsx  use-chat-sessions.test.ts  (+3 more)
src/contexts/: data-changed.ts  overview-loading.ts
src/database/: csv.ts  index.ts  notion.ts
src/i18n/: en.ts  index.tsx  types.ts  zh.ts
src/lib/: loading.tsx  utils.ts
src/middlelayers/: assets.ts  cache-invalidation.test.ts  charts-asset-type.test.ts  charts-assets.ts  charts-blacklist.test.ts  charts-history.ts  charts-profit-cache-persistence.test.ts  charts-profit.test.ts  charts-profit.ts  charts-refresh.test.ts  charts-refresh.ts  charts-resize.ts  charts-shared.ts  charts-timeseries.ts  charts.ts  cloudsync.ts  configuration-ai.test.ts  configuration-blacklist.test.ts  configuration-stock.test.ts  configuration.test.ts  configuration.ts  constants.ts  consts.ts  currency.ts  data-source-fallback.test.ts  data-source-identities.test.ts  data.ts  database.test.ts  database.ts  datamanager.test.ts  datamanager.ts  encryption-write-gate.test.ts  encryption-write-gate.ts  license.test.ts  license.ts  portfolio-baseline.ts  types.d.ts  wallet.test.ts  wallet.ts
src/test/: setup.ts
src/utils/: app.test.ts  app.ts  assets.test.ts  assets.ts  attach-to.test.ts  attach-to.ts  cache.ts  chart-theme.ts  chart.ts  coins.ts  color.ts  csv.ts  currency.ts  date.ts  hook.ts  http.ts  legend.ts  loading.tsx  string.ts  wallet-treemap.test.ts  wallet-treemap.ts
(+215 files in other folders)
