[package]
authors = ["domechn"]
description = "Analyze all your crypto assets in cex and web3 wallet."
edition = "2021"
license = "CC-BY-NC-ND-4.0"
name = "track3"
repository = "https://gituhb.com/domechn/track3"
rust-version = "1.80"
version = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
binance-rs-async = {version = "1.3.3", features = ["wallet_api", "futures_api", "savings_api"] }
coingecko = {git = "https://github.com/domechn/coingecko-rs.git", rev = "41e819e"}
lazy_static = "^1.4"
magic-crypt = "3.1.12"
rand = "^0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = {version = "2", features = [ "protocol-asset"] }
tokio = {version = "1", features = ["sync"] }
uuid = "1.3.3"
reqwest = "0.12"
indexmap = "=2.6.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
version-compare = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2"
