[package]
authors = ["domechn"]
description = "Analyze all your crypto assets in cex and web3 wallet."
edition = "2021"
license = "CC-BY-NC-ND-4.0"
name = "track3"
repository = "https://gituhb.com/domechn/track3"
rust-version = "1.81"
version = "0.6.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "=2.2.0", features = [] }

[dependencies]
binance-rs-async = {version = "1.3.3", features = ["wallet_api", "futures_api", "savings_api", "margin_api"] }
coingecko = {git = "https://github.com/domechn/coingecko-rs.git", rev = "41e819e"}
lazy_static = "^1.4"
magic-crypt = "4.0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "=0.8.5", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = {version = "=2.5.1", features = [ "protocol-asset"] }
tokio = {version = "=1.44.2", features = ["sync"] }
uuid = "=1.20.0"
reqwest = "=0.12.15"
indexmap = "=2.11.4"
tauri-plugin-dialog = "=2.2.1"
tauri-plugin-shell = "=2.2.1"
tauri-plugin-fs = "=2.2.1"
tauri-plugin-http = "=2.4.3"
tauri-plugin-process = "=2.2.1"
tauri-plugin-opener = "=2.2.7"
version-compare = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "=2.7.1"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "=2.2.0"
