[package]
authors = ["domechn"]
description = "Analyze all your crypto assets in cex and web3 wallet."
edition = "2021"
license = "CC-BY-NC-ND-4.0"
name = "track3"
repository = "https://gituhb.com/domechn/track3"
rust-version = "1.94"
version = "0.6.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "=2.5.6", features = [] }

[dependencies]
aes = "=0.8.4"
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
binance-rs-async = {version = "1.3.3", features = ["wallet_api", "futures_api", "savings_api", "margin_api"] }
cbc = "=0.1.2"
coingecko = {git = "https://github.com/domechn/coingecko-rs.git", rev = "41e819e"}
lazy_static = "^1.4"
md-5 = "=0.10.6"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "=0.10.9"
sqlx = {version = "=0.8.5", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tauri = {version = "=2.10.3", features = [ "protocol-asset"] }
tokio = {version = "=1.44.2", features = ["sync"] }
uuid = {version = "=1.20.0", features = ["v4"] }
reqwest = "=0.12.15"
indexmap = "=2.11.4"
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-fs = "=2.5.0"
tauri-plugin-http = "=2.5.8"
tauri-plugin-process = "=2.3.1"
tauri-plugin-opener = "=2.5.3"
version-compare = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "=2.10.1"

[dependencies.tauri-plugin-sql]
default-features = false
features = ["sqlite"] # or "postgres", or "mysql"
version = "=2.4.0"
